# soccer-db

./: .editorconfig  .gitignore  README.md  pyproject.toml
data/: README.md  club_tables.json  premier_league_results_92_23.csv  premier_league_results_92_23.json
data/extract/premierleague.com/matches/: 12454.html  12455.html  12456.html  12458.html  12459.html  12460.html  12461.html  12462.html  12463.html  12464.html  12465.html  12466.html  12467.html  12468.html  12469.html  12470.html  12471.html  12472.html  12473.html  12474.html  12475.html  12476.html  12477.html  12478.html  12479.html  12480.html  12481.html  12482.html  12483.html  12484.html  12485.html  12486.html  12487.html  12488.html  12489.html  12490.html  12491.html  12492.html  12493.html  12494.html  (+1200 more)
data/extract/premierleague.com/results/: 00_01.html  01_02.html  02_03.html  03_04.html  04_05.html  05_06.html  06_07.html  07_08.html  08_09.html  09_10.html  10_11.html  11_12.html  12_13.html  13_14.html  14_15.html  15_16.html  16_17.html  17_18.html  18_19.html  19_20.html  20_21.html  21_22.html  22_23.html  92_93.html  93_94.html  94_95.html  95_96.html  96_97.html  97_98.html  98_99.html  99_00.html
data/transform/premierleague.com/matches/: match_links.json
data/transform/premierleague.com/results/: 99_00.json
scripts/: README.md  epl.py
soccer_db/: __main__.py  club_income_expense_dl.py  club_table_dl.py
