[tool.poetry]
name = "soccer-db"
version = "0.1.0"
description = ""
authors = ["Kevin Bradwick <kevinbradwick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
fire = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
